package bolt.protocol;
option go_package = "proto";

message File {
    required string path = 1;
    optional bytes key = 2;
    optional bytes hash = 3;
    required int64 file_size = 4;
    required int32 kind = 5;
    
    // Timestamp formated as RFC 3339
    required bytes mod_time = 6;
}

// Dirent is like a file, but does not include sensitive information.
message Dirent {
    required string path = 1;
    required int64 file_size = 2;
    required int32 kind = 3;
    required bytes mod_time = 4;
}

message Dirlist {
    repeated Dirent entries = 1;
}

message Checkpoint {
    required bytes hash = 1;
    required bytes mod_time = 2;
    required int64 file_size = 3;
    required int32 change = 4;
    // TODO: add authorship message and struct.
    required string author = 5;
}

message History {
    repeated Checkpoint hist = 1 [packed=false];
}

// A pack stores the history of a file besides it's metadata.
// i.e. everything needed for an exported file.
message Pack {
    required File file = 1;
    required History history = 2;
}

